2021-10-20  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_http.c: ensure we provide an adequate 'Content-Type' header value
      with a MIME type that is requested via the /status.<suffix>.
      
2021-08-14 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/cfg.c: fixed config parsing error log

2021-08-09 Alexander Malysh <amalysh @ kannel.org>
    * gw/bb_smscconn.c: fixed memleak & double conn creation for add-smsc

2021-07-27 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/conn.c: applied SSL cache data patch.
      Thanks to Paul Bagyenda for this patch.

2021-07-08 Alexander Malysh <amalysh @ kannel.org>
    * gw/smsc/smsc_smpp.c: fixed wrong if condition

2021-07-08 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/gwthread-pthread.c: increased thread limit and change warning to error
      about our thread limits

2021-06-28 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/http.c: use trans->conn instead of direct conn.

2021-06-28 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/http.c: fixed issue with not encoded user & pass in the URL

2021-03-18  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr_spool.c: fix error based memory leaks. NLC.
    
2021-03-04  Stipe Tolj  <stolj at kannel.org>
    * utils/mtbatch.c: add support for various codings (7bit, 8bit, Unicode) via
      '-c coding' and character transocing via option '-C charset'.
      
2021-03-02  Stipe Tolj  <stolj at kannel.org>
    * utils/mtbatch.c: add '-M meta-data' support.
    
2020-11-09  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: change default HTTP client side timeout from 240s to 30s.
     
2020-10-29  Stipe Tolj  <stolj at kannel.org>
    * gw/meta_data.[ch]: implement meta_data_remove_value() to allow removing values
      from a group.
      
2020-06-19  Stipe Tolj  <stolj at kannel.org>
    * bb_smscconn.c: fix smsc2_remove_smsc() which didn't calibrate the i counter
      when a SMSC connection is removed, so we would step over one index in the list